[tool.poetry]
name = "flighthouse"
version = "0.1.0"
description = ""
authors = ["Adrian del Ser <adrian.delser@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
gflow = {path = "/Users/adriandelser/Desktop/ENAC/gflow"}
djitellopy = {path = "/Users/adriandelser/Desktop/ENAC/DJITelloPy"}
pybullet = "^3.2.6"
scenebuilder = {path = "/Users/adriandelser/Desktop/ENAC/scenebuilder"}
flask = "^3.0.2"
requests = "^2.31.0"
vispy = "^0.14.1"
plotly = "^5.19.0"
ipywidgets = "^8.1.2"
nbformat = "^5.9.2"
ipython = "^8.22.1"
pyqtgraph = "^0.13.3"
pyqt5 = "^5.15.10"
pyopengl = "^3.1.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
